2008-08-10  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtksourceview2.defs: Add some defaults and null-ok.

	* gtksourceview2.override: Manually wrap
	gtk_source_view_get_mark_category_background

	* docs/reference/gtksourceview2-gtksourceview.xml:
	* docs/reference/gtksourceview2-gtksourcelanguagesmanager.xml:
	Update with the new API.

2008-08-10  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* configure.ac: bump gtksourceview required version 2.3.0

2008-08-10  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* configure.ac: bump version 2.3.0

	* gtksourceview2.defs: Add new gtksourceview API.

2008-04-28  Paolo Borelli  <pborelli@katamail.com>

	* setup.py:
	* pygtksourceview_postinstall.py:

	add an unofficial distutils based buildsystem that alllows to create
	win32 installers.

=== pygtksourceview 2.2.0 ===

2008-03-10  Paolo Borelli  <pborelli@katamail.com>

	* configure.ac:
	* NEWS:

	pygtksourceview 2.2.0 released

=== pygtksourceview 2.1.1 ===

2008-02-03  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* NEWS: updated

	pygtksourceview 2.1.1 released

2008-02-03  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/reference/gtksourceview2-gtksourcebuffer.xml: small fix.

2008-02-03  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtksourceview2.defs: define NULL as default for catogory params.

	* docs/reference/gtksourceview2-gtksourcebuffer.xml: fix the docs.

2008-02-01  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview2.override: fix various issues with some of the marks
	functions

	* test/test-widget.py: make marks work in the test widget

2008-02-01  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview2.defs:

	Adapt to Mark API changes

2008-01-21  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* configure.ac: post release version bump

=== pygtksourceview 2.1.0 ===

2008-01-21  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* NEWS: updated

	pygtksourceview 2.1.0 released

2008-01-21  Gian Mario Tagliaretti  <gianmt@gnome.org>
